tests/chapter_14/invalid_types/dereference_non_pointer.c
/* It's illegal to dereference an expression with a non-pointer type */
int main(void) {
    unsigned LONG64 l = 100ul;
    return *l;
}